<resources>
    <string name="app_name">My Purchases</string>
    <string name="sign_in">sign-in</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="sign_in_btm">sign in</string>
    <string name="username">username</string>
    <string name="re_password">re_password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="decripation">decripation</string>
    <string name="supermarket_item">supermarket_item</string>
    <string name="add">add</string>
    <string name="product_list">Product List</string>
    <string name="barcode">barcode</string>
    <string name="enter_you_decipation">enter you decipation</string>
    <string name="priec">priec</string>
    <string name="enter_you_priec">enter your price</string>
    <string name="logout">logout</string>
    <string name="log_out">Log out</string>
    <string name="decripa_pro">decripa_pro</string>
    <string name="barcode_pro">barcode_pro</string>
    <string name="addcart">addCart</string>
    <string name="qutity_pro">qutity_pro</string>
    <string name="user">User</string>
    <string name="supermarket">Supermarket</string>
    <string name="upload">upload</string>
    <string name="button">Button</string>
    <string name="change_language">change language</string>
    <string name="uploed">uploed</string>
    <string name="select">select</string>
    <string name="registration">Registration</string>
   <string name="Scanner">Scanner</string>
    <string name="show">show</string>
    <string name="profiel">Profiel</string>
    <string name="supermarket_list">SuperMarket List</string>
    <string name="cart_list">Cart List</string>
    <string name="home" >home</string>
    <string name="person">person</string>
</resources>