<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_produtor"
        android:layout_width="252sp"
        android:layout_height="151sp"
        android:layout_marginTop="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/decripa_pro"
        android:layout_width="229dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/decripa_pro"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barcode_pro" />

    <TextView
        android:id="@+id/barcode_pro"
        android:layout_width="227sp"
        android:layout_height="51sp"
        android:layout_marginTop="32sp"
        android:fontFamily="sans-serif-black"
        android:text="@string/barcode_pro"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_produtor" />

    <ImageView
        android:id="@+id/sub_prod"
        android:layout_width="63sp"
        android:layout_height="34sp"
        android:layout_marginStart="52sp"
        android:layout_marginTop="396sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_sub" />

    <ImageView
        android:id="@+id/add_pro"
        android:layout_width="63sp"
        android:layout_height="34sp"
        android:layout_marginTop="396sp"
        android:layout_marginEnd="52sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_add" />

    <Button
        android:id="@+id/add_cart"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:layout_marginBottom="212sp"
        android:text="@string/addcart"
        android:background="@drawable/cutom_btm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/qutity_prodctor"
        android:layout_width="90sp"
        android:layout_height="30sp"
        android:fontFamily="sans-serif-black"
        android:text="@string/qutity_pro"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/add_cart"
        app:layout_constraintEnd_toStartOf="@+id/add_pro"
        app:layout_constraintStart_toEndOf="@+id/sub_prod"
        app:layout_constraintTop_toBottomOf="@+id/decripa_pro" />

</androidx.constraintlayout.widget.ConstraintLayout>